79 test patch beer